solidified auto-pixel-width detection preliminary pausing-of-live-tv work

--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -473,33 +473,37 @@ BEGIN
                     IDC_STATIC,7,222,279,8
 END
 
-IDD_TSOPTIONS DIALOG DISCARDABLE  0, 0, 239, 158
+IDD_TSOPTIONS DIALOG DISCARDABLE  0, 0, 239, 175
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "TimeShift Options (under construction)"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,66,137,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,122,137,50,14
+    DEFPUSHBUTTON   "OK",IDOK,66,154,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,122,154,50,14
     PUSHBUTTON      "Compression Options...",IDC_TSCOMPRESSIONBUTTON,47,7,
                     146,14
-    PUSHBUTTON      "Help",IDC_COMPRESSIONHELP,202,7,30,14
-    COMBOBOX        IDC_TSWAVEINCOMBO,47,30,146,88,CBS_DROPDOWNLIST | 
+    PUSHBUTTON      "Help",IDC_TSCOMPRESSIONHELP,202,7,30,14
+    COMBOBOX        IDC_TSWAVEINCOMBO,47,48,146,88,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_TSWAVEOUTCOMBO,47,48,146,70,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_TSWAVEOUTCOMBO,47,66,146,70,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Help",IDC_WAVEOUTHELP,202,38,30,14
-    RTEXT           "Wave In:",IDC_STATIC,13,33,30,8
-    RTEXT           "Wave Out:",IDC_STATIC,8,51,36,8
-    GROUPBOX        "Recording Height",IDC_STATIC,39,69,160,61
-    CONTROL         "Full-height (not yet implemented)",IDC_FULLHEIGHTRADIO,
-                    "Button",BS_AUTORADIOBUTTON | WS_DISABLED,47,80,117,10
-    CONTROL         "1/2-height Even lines",IDC_HALFEVENRADIO,"Button",
-                    BS_AUTORADIOBUTTON,47,91,83,10
-    CONTROL         "1/2-height Odd lines",IDC_HALFODDRADIO,"Button",
-                    BS_AUTORADIOBUTTON,47,102,80,10
-    CONTROL         "1/2-height Even and Odd Averaged",IDC_HALFAVERAGEDRADIO,
-                    "Button",BS_AUTORADIOBUTTON,47,113,129,10
-    PUSHBUTTON      "Help",IDC_HEIGHTHELP,202,92,30,14
+    PUSHBUTTON      "Help",IDC_TSWAVEHELP,202,56,30,14
+    RTEXT           "Wave In:",IDC_STATIC,13,51,30,8
+    RTEXT           "Wave Out:",IDC_STATIC,8,69,36,8
+    GROUPBOX        "Recording Height",IDC_STATIC,39,85,160,61
+    CONTROL         "Full-height (not yet implemented)",
+                    IDC_TSFULLHEIGHTRADIO,"Button",BS_AUTORADIOBUTTON | 
+                    WS_DISABLED,47,96,117,10
+    CONTROL         "1/2-height Even lines",IDC_TSHALFEVENRADIO,"Button",
+                    BS_AUTORADIOBUTTON,47,107,83,10
+    CONTROL         "1/2-height Odd lines",IDC_TSHALFODDRADIO,"Button",
+                    BS_AUTORADIOBUTTON,47,118,80,10
+    CONTROL         "1/2-height Even and Odd Averaged",
+                    IDC_TSHALFAVERAGEDRADIO,"Button",BS_AUTORADIOBUTTON,47,
+                    129,129,10
+    PUSHBUTTON      "Help",IDC_TSHEIGHTHELP,202,108,30,14
+    PUSHBUTTON      "Audio-Mixer Setup...",IDC_TSMIXERBUTTON,47,26,146,14
+    PUSHBUTTON      "Help",IDC_TSMIXERHELP,202,26,30,14
 END
 
 
@@ -1060,7 +1064,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 232
         TOPMARGIN, 7
-        BOTTOMMARGIN, 151
+        BOTTOMMARGIN, 168
     END
 END
 #endif    // APSTUDIO_INVOKED
