--- a/DIDMO/DeinterlaceDMO.rc
+++ b/DIDMO/DeinterlaceDMO.rc
@@ -52,12 +52,12 @@ END
 // Dialog
 //
 
-IDD_DEINTERLACEPROPERTIES DIALOGEX 0, 0, 211, 171
+IDD_DEINTERLACEPROPERTIES DIALOGEX 0, 0, 210, 171
 STYLE WS_CHILD
 FONT 8, "MS Sans Serif"
 BEGIN
     EDITTEXT        IDC_PLUGIN_FILENAME,20,131,140,14,ES_AUTOHSCROLL
-    GROUPBOX        "Plugin file",IDC_STATIC,0,120,210,50
+    GROUPBOX        "Plugin file",IDC_STATIC,0,120,209,50
     LTEXT           "File:",IDC_STATIC,5,145,14,8
     GROUPBOX        "Filter info",IDC_STATIC,15,75,180,40
     LTEXT           "Status:",IDC_STATIC,21,86,23,8
@@ -65,16 +65,18 @@ BEGIN
                     WS_GROUP,65,86,125,10,WS_EX_STATICEDGE
     LTEXT           "Name:",IDC_STATIC,21,100,22,8
     LTEXT           "",IDC_PLUGIN_NAME,65,100,125,10,0,WS_EX_STATICEDGE
-    PUSHBUTTON      "Load",IDC_PLUGIN_LOAD,20,150,40,14
-    PUSHBUTTON      "Unload",IDC_PLUGIN_UNLOAD,75,150,40,14
-    PUSHBUTTON      "Browse...",IDC_PLUGIN_BROWSE,165,131,40,14
-    CTEXT           "Deinterlace DMO Filter",IDC_STATIC,0,0,210,10
+    PUSHBUTTON      "Load",IDC_PLUGIN_LOAD,25,150,40,14
+    PUSHBUTTON      "Unload",IDC_PLUGIN_UNLOAD,81,150,40,14
+    PUSHBUTTON      "Browse...",IDC_PLUGIN_BROWSE,165,131,39,14
+    CTEXT           "Deinterlace DMO Filter",IDC_STATIC,0,0,209,10
     CTEXT           "Copyright (c) 2001 Torbjörn Jansson",IDC_STATIC,0,10,
-                    210,10
+                    209,10
     CTEXT           "This program comes with ABSOLUTELY NO WARRANTY.  This software in licenced under the terms of the GNU GPL for details see http://www.gnu.org/copyleft/gpl.html",
                     IDC_STATIC,10,35,190,25
-    GROUPBOX        "",IDC_STATIC,0,25,210,45
-    CTEXT           "Based on code from DScaler",IDC_STATIC,0,20,210,8
+    GROUPBOX        "",IDC_STATIC,0,25,209,45
+    CTEXT           "Based on code from DScaler",IDC_STATIC,0,20,209,8
+    PUSHBUTTON      "Show Plugin UI",IDC_PLUGIN_SHOWUI,135,150,55,14,
+                    WS_DISABLED
 END
 
 IDD_DEINTERLACESETTINGS DIALOG DISCARDABLE  0, 0, 211, 161
