--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -319,12 +319,12 @@ END
 IDD_ABOUT DIALOGEX 22, 17, 374, 274
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "About DScaler"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,305,9,58,19,WS_GROUP,WS_EX_CLIENTEDGE
-    CTEXT           "DScaler Version 3.x",IDC_VERSION,0,3,293,9
-    CTEXT           "Copyright (C) 2000, 2001 John Adcock",IDC_STATIC,0,24,
-                    293,10
+    CTEXT           "DScaler Version 3.x",IDC_VERSION,6,3,288,9
+    CTEXT           "Copyright (C) 2000, 2001 John Adcock",IDC_STATIC,6,25,
+                    288,9
     GROUPBOX        "Based On",IDC_STATIC,6,144,364,56
     GROUPBOX        "GPL Information && Open Source Policy",IDC_STATIC,5,203,
                     364,65
@@ -335,8 +335,7 @@ BEGIN
     LTEXT           "MultiDec Source (c) Espresso (echter_espresso@hotmail.com)",
                     IDC_STATIC,13,154,348,9
     GROUPBOX        "Authors",IDC_STATIC,6,37,180,100
-    CTEXT           "()()  http://www.dscaler.org  ()()",IDC_LINK2,0,13,293,
-                    10
+    CTEXT           "http://www.dscaler.org",IDC_LINK2,6,13,288,9,SS_SUNKEN
     LTEXT           "bttv - Bt848 frame grabber driver Copyright (c) Ralph Metzler && Marcus Metzler",
                     IDC_STATIC,13,165,347,11
     LTEXT           "I2C Interface Copyright (c) Gerd Knorr",IDC_STATIC,13,
